# combine-derby

./: .gitignore  Cargo.toml  handover-notes.md  licence.txt  readme.md
.github/workflows/: build.yaml  deploy_wasm.yaml
assets/: basic-wheel.glb  cow.glb
blender/: (mirror)basic-combine-body.blend  basic-combine-body.blend1  basic-combine-body.glb  basic-wheel.blend  basic-wheel.blend1  combine-body.blend  cow-unmirrored.blend  cow.blend  hay-bale.blend  mirrored-combine-body.blend
docs/: combine-derby.d.ts  combine-derby.js  combine-derby_bg.wasm.d.ts  index.html
docs/assets/: basic-combine-body.glb  combine-body.glb  hay-bale.glb
src/: ai.rs  arena.rs  camera.rs  combine.rs  config.rs  control.rs  events.rs  input.rs  main.rs  obstacle.rs  sounds.rs  ui.rs
