[package]
name = "combine-derby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.0"
bevy_rapier3d = "0.16.2"
build-time = "0.1.2"
git-version = "0.3.5"
rand = "0.8.5"
